--- a/paginas/cortes.html
+++ b/paginas/cortes.html
@@ -7,6 +7,7 @@
     <meta name="description" content="aqui encontraras los cortes de cabello que se manejan en una barberia para que puedas aprender de ellos y puedas encontrar el mejor para ti">
     <meta name="keywords" content="barberia, cortes de barberia, comienzos de la barberia, conocimientos sobre la barberia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../imagenes/logo_favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
