corrigiendo ortografia en el index

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     <main>
         <section class="wow animate__animated animate__bounceInLeft informacion col-sm-12 col-md-12 col-lg-12 p-2">
             <h3>
-                Informacion importante 
+                Información importante  
             </h3>
             <p>
-               Lo que busca este sitio web es que puedas aprender a diferenciar la jerarquia de los cortes aprendas a realizarlos, aprendar a manejar herramientas importantes de la barberia como por ejemplos, las cuchillas, las tijeras.
-               Tambien que aprendas los inicios que tuvo como evoluciono y como crecio tanto ahora en dia,
-               y por supuesto que aprendas conceptos mas a fondo como el uso de cuchillas para realizar lineas o tribales.
+               Lo que busca este sitio web es que puedas aprender a diferenciar la jerarquía de los cortes, aprender a realizarlos, aprender a manejar herramientas importantes de la barbería como por ejemplos, las cuchillas, las tijeras.
+               También que aprendas los inicios que tuvo, como evoluciono y como creció hoy día,
+               y por supuesto que aprendas conceptos más a fondo como el uso de cuchillas para realizar líneas o tribales.
+
             </p>
         </section>
         <hr class="lineas">
@@ -49,7 +50,7 @@
                     METAS
                 </h5>
                 <p>
-                    Aprender a realizar los diferentes cortes de un dia a dia en la barberia.
+                    Aprender a realizar los diferentes cortes de un día a día en la barbería.
                 </p>
             </div>
             <div class="wow animate__animated animate__bounceInUp logros col-sm-12 col-md-6 col-lg-4 p-2">
@@ -57,13 +58,13 @@
                     CONCEPTOS
                 </h5>
                 <p>
-                    Comprension y pasos para realizar un corte
+                    Comprensión y pasos para realizar un corte
                 </p>
                 <p>
                     Uso respectivo de los tipos de tijeras
                 </p>
                 <p>
-                    Manejo adecuado de cuchilla para trabajo de lineas
+                    Manejo adecuado de cuchilla para trabajo de líneas
                 </p>
             </div>
             <div class="wow animate__animated animate__bounceInRight objetivos col-sm-12 col-md-12 col-lg-4 p-2">
@@ -71,7 +72,7 @@
                     UTILIDAD
                 </h5>
                 <p>
-                    Te servira mucho en tu dia a dia a poder hacer los cortes de cabello ya que el cabello de los hombres esta siempre en constante crecimiento.
+                    Te servirá mucho en tu día a día a poder hacer los cortes de cabello ya que el cabello de los hombres esta siempre en constante crecimiento.
                 </p>
             </div>
         </section>
