corrigiendo ortografia en la pagina cortes

--- a/paginas/cortes.html
+++ b/paginas/cortes.html
@@ -45,13 +45,14 @@
         <div class="expli_taper col-sm-12 col-md-12 col-lg-12">        
             <h3>TAPER FADE</h3>
             <p>
-                Lo primero que tenemos que hacer para hacer el coby corte de cabello es, hacer una linea diagonal que termine en el cerquillo y que conecte con la oreja. 
-                Para que tu corte de cabello el coby te quede como en la imagen, debes de seguirme paso a paso para que sea mucho mas fácil aprender. Luego vamos bajar total mente la palanca de nuestra maquina en un para que sea una 0.5 y vamos a hacer otro espacio de 1 cm de altura.
-                Después utilizamos la guía numero también con otro espacio de 1 centímetro, y ahi mismo bajar la palanca para borrar esa misma linea.
-                luego vamos a utilizar la guía 1.5 para seguir desbastando la misma linea de la guía de la 1. 
-                En el 4 paso vamos a utilizar la guía 0.5 y vamos a borrar la misma linea de que hicimos al comienzo del corte, tenemos que bajar la palanca solo un poco para que no se te vaya a subir el degrade.
-                En este ultimo paso vamos a borrar la linea de la 0 y eso se hace bajando la palanca solo un poco y hacer un movimiento como si estuviéramos haciendo un gancho.
-                Ya por ultimo pasamos la maquina shaver para borrar la patilla y después marcar el corte con la barbera elegance.Recuerda que en estos tipos de cortes de cabello para hombres coby, es mejor borrar la patilla, para mi gusto queda mucho mejor.
+                Lo primero que tenemos que hacer para hacer el coby corte de cabello es, hacer una línea diagonal que termine en el cerquillo y que conecte con la oreja. 
+                Para que tu corte de cabello el coby te quede como en la imagen, debes de seguirme paso a paso para que sea mucho más fácil aprender. Luego vamos bajar total mente la palanca de nuestra maquina en un para que sea una 0.5 y vamos a hacer otro espacio de 1 cm de altura.
+                Después utilizamos la guía numero también con otro espacio de 1 centímetro, y ahí mismo bajar la palanca para borrar esa misma línea.
+                luego vamos a utilizar la guía 1.5 para seguir desbastando la misma línea de la guía de la 1. 
+                En el 4 paso vamos a utilizar la guía 0.5 y vamos a borrar la misma línea de que hicimos al comienzo del corte, tenemos que bajar la palanca solo un poco para que no se te vaya a subir el degrade.
+                En este último paso vamos a borrar la línea de la 0 y eso se hace bajando la palanca solo un poco y hacer un movimiento como si estuviéramos haciendo un gancho.
+                Ya por ultimo pasamos la maquina shaver para borrar la patilla y después marcar el corte con la barbera elegance. Recuerda que en estos tipos de cortes de cabello para hombres coby, es mejor borrar la patilla, para mi gusto queda mucho mejor.
+
             </p>
         </div>
     </section>
@@ -70,46 +71,46 @@
         <div class="expli_taper col-sm-12 col-md-12 col-lg-12">        
             <h3>CORTE MID FADE</h3>
             <p>
-                Lo primero de como hacer un mid fade, es empezar a trazar nuestro corte de cabello con la cuchilla numero 0. También podemos hacer el fade con navaja pero eso lo voy a hacer un totorial mas avanzado. En este paso vamos tener mucho cuidado es preferible que lo dejes mas abajo de como esta en la imagen a mas arriba porque ahí si ya seria otro corte de pelo.
-                    Recuerda dejar bien la medida en ambos lados, y si no esta bien, ir subiendo poco a poco hasta que este parejo, sesta es una de las razones de como hacer un fade perfecto.
-                    Si ves bien la imagen de arriba, en la parte de atrás el fade termina en caída para que quede con una forma mas agradable y que no quede todo redondo. Y si es para una a hacer este fade para afro, es mejor que lo hagas mas abajo así tendrás mucho mas espacio para desvanecer.
+                Lo primero de cómo hacer un mid fade, es empezar a trazar nuestro corte de cabello con la cuchilla número 0. También podemos hacer el fade con navaja, pero eso lo voy a hacer un tutorial más avanzado. En este paso vamos tener mucho cuidado es preferible que lo dejes más abajo de como esta en la imagen a más arriba porque ahí si ya sería otro corte de pelo.
+                    Recuerda dejar bien la medida en ambos lados, y si no está bien, ir subiendo poco a poco hasta que este parejo, sesta es una de las razones de cómo hacer un fade perfecto.
+                    Si ves bien la imagen de arriba, en la parte de atrás el fade termina en caída para que quede con una forma más agradable y que no quede todo redondo. Y si es para una a hacer este fade para afro, es mejor que lo hagas más abajo así tendrás mucho más espacio para desvanecer.
                     <br>
                     <strong>Como hacer un mid fade Segundo paso</strong> 
                     <br>
-                    Lo segundo que tenemos que hacer en el fade paso a paso, es pasar la 0.5 hasta que quede como en la imagen, recuerda trabajar con suficiente espacio así como lo estoy haciendo.
-                    Hay mucha gente que dice como hacer un mid fade en 4 minutos pero es pura mentira, en este tutorial en español te voy a demostrar que para hacer un fade oscuro o un fade claro, necesitas de mucho tiempo y dedicación, y si quieres una sombra perfecta te vas a demorar unos 30 minutos mínimo.
+                    Lo segundo que tenemos que hacer en el fade paso a paso, es pasar la 0.5 hasta que quede como en la imagen, recuerda trabajar con suficiente espacio, así como lo estoy haciendo.
+                    Hay mucha gente que dice cómo hacer un mid fade en 4 minutos, pero es pura mentira, en este tutorial en español te voy a demostrar que para hacer un fade oscuro o un fade claro, necesitas de mucho tiempo y dedicación, y si quieres una sombra perfecta te vas a demorar unos 30 minutos mínimo.
                     <br>
                     <strong>Tercer paso para hacer el corte de cabello</strong> 
                     <br>
-                    Cuando ya tengamos marcado con la 0.5 agarramos nuestra guía numero 1 y vamos pasarla como en la imagen. Recuerda que este es el mid fade sencillo y no necesitas trabajar con espacios cortos date la libertad de trabajar con suficiente espacio para que sea mucho mas fácil aprender este tutorial.
+                    Cuando ya tengamos marcado con la 0.5 agarramos nuestra guía número 1 y vamos pasarla como en la imagen. Recuerda que este es el mid fade sencillo y no necesitas trabajar con espacios cortos date la libertad de trabajar con suficiente espacio para que sea mucho más fácil aprender este tutorial.
                     <br>
                     <strong> Como hacer un mid fade cuarto paso</strong>
                     <br>
-                    Ya cuando le hallamos dado toda la forma con la guía numero 1, y veamos que tenga la misma medida en los dos lados de la cabeza, empezamos con la guía numero 2.
-                    Tienes que dejar un espacio de un centímetro y medio de altura para la guía 1.5, recuerda utilizar el cepillo andiz, y cuando vayas recortando el cabello ir limpiando.
+                    Ya cuando le hallamos dado toda la forma con la guía número 1, y veamos que tenga la misma medida en los dos lados de la cabeza, empezamos con la guía número 2.
+                    Tienes que dejar un espacio de un centímetro y medio de altura para la guía 1.5, recuerda utilizar el cepillo andis, y cuando vayas recortando el cabello ir limpiando.
                     <br>
                     <strong>Quinto paso para hacer el corte de cabello</strong>
                     <br>
-                    En el quinto paso del mid fade, tenemos que utilizar la guía numero 3 y borrar la linea que dejo la guía numero 2, este paso es muy importante porque esta linea se borra con la ayuda de la guía numero 2 y medio.
-                    Muy importante este corte de cabello para niño o para una persona adulta es preferible terminar en la guía numero 3 y máximo en la 3.5, y luego ya terminar la parte de arriba con las tijeras.
+                    En el quinto paso del mid fade, tenemos que utilizar la guía número 3 y borrar la línea que dejo la guía número 2, este paso es muy importante porque esta línea se borra con la ayuda de la guía número 2 y medio.
+                    Muy importante este corte de cabello para niño o para una persona adulta es preferible terminar en la guía número 3 y máximo en la 3.5, y luego ya terminar la parte de arriba con las tijeras.
                     <br>
                     <strong> Como hacer un mid fade desde 0 cesto paso</strong>
                     <br>
-                    El cesto paso que tenemos que hacer para el corte de cabello mid fade claro. Vamos a volver a la parte de la guía 1 y 2, para aprender a como borrar la linea entre la 1 y la 2 tienes que agarrar la guía 1.5 en un movimiento suave porque si lo haces muy duro se te va a subir el corte de pelo.
-                    Otra cosa y muy importante de como borrar la raya o linea entre la 1 y la 2 es que tienes que guiarte de el vídeo de arriba para que se te haga mas fácil la explicación.
+                    El cesto paso que tenemos que hacer para el corte de cabello mid fade claro. Vamos a volver a la parte de la guía 1 y 2, para aprender a como borrar la línea entre la 1 y la 2 tienes que agarrar la guía 1.5 en un movimiento suave porque si lo haces muy duro se te va a subir el corte de pelo.
+                    Otra cosa y muy importante de como borrar la raya o línea entre la 1 y la 2 es que tienes que guiarte del vídeo de arriba para que se te haga más fácil la explicación.
                     <br>
                     <strong> Séptimo paso para hacer el corte de cabello</strong>
                     <br>
-                    Para este paso tenemos que volver a la guía numero 1 y con la palanca de la maquina walh o la que tengas vamos a bajarla un poquito mas, para así tratar de borrar esa linea esto es un poco de complicado pero con practica se te va a hacer fácil.
+                    Para este paso tenemos que volver a la guía número 1 y con la palanca de la maquina wahl o la que tengas vamos a bajarla un poquito más, para así tratar de borrar esa línea esto es un poco de complicado, pero con practica se te va a hacer fácil.
                     <br>
                     <strong> Octavo paso para hacer el corte de cabello </strong>
                     <br>
                     Después de hacer todos los pasos al pie de la letra como en las imágenes. Vamos a ir al espacio de la 0.5 y 1. Este paso es de mucho cuidado y presta mucha atención.
-                    Agarramos la guía 0.5 y bajamos un poco la palanca de la maquina para ir borrando la linea de la 1. En este paso tienes que tener mucha paciencia porque esa linea no se borra a la primera. Tienes que ir la bajando la palanca hasta borrarla, y ya la ultima opción es dejar la 0.5 sin bajar la palanca.
+                    Agarramos la guía 0.5 y bajamos un poco la palanca de la máquina para ir borrando la línea de la 1. En este paso tienes que tener mucha paciencia porque esa línea no se borra a la primera. Tienes que ir la bajando la palanca hasta borrarla, y ya la última opción es dejar la 0.5 sin bajar la palanca.
                     <br>
-                    <strong> Noveno y ultimo paso del mid fade </strong>
+                    <strong> Noveno y último paso del mid fade </strong>
                     <br>
-                    El ultimo paso para terminar el corte low fade. Tenemos que agarrar nuestra maquina y con la cuchilla 0 baja, vamos a bajar la palanca un poquito y ir borrando la linea de la 0.
+                    El último paso para terminar el corte low fade. Tenemos que agarrar nuestra máquina y con la cuchilla 0 baja, vamos a bajar la palanca un poquito e ir borrando la línea de la 0.
             </p>
         </div>
     </section>
@@ -128,13 +129,13 @@
         <div class="expli_taper col-sm-12 col-md-12 col-lg-12">        
             <h3>MOHICANO</h3>
             <p>
-                Lo primero que tenemos que hacer para hacer el coby corte de cabello es, hacer una linea diagonal que termine en el cerquillo y que conecte con la oreja. 
-                Para que tu corte de cabello el coby te quede como en la imagen, debes de seguirme paso a paso para que sea mucho mas fácil aprender. Luego vamos bajar total mente la palanca de nuestra maquina en un para que sea una 0.5 y vamos a hacer otro espacio de 1 cm de altura.
-                Después utilizamos la guía numero también con otro espacio de 1 centímetro, y ahi mismo bajar la palanca para borrar esa misma linea.
-                luego vamos a utilizar la guía 1.5 para seguir desbastando la misma linea de la guía de la 1. 
-                En el 4 paso vamos a utilizar la guía 0.5 y vamos a borrar la misma linea de que hicimos al comienzo del corte, tenemos que bajar la palanca solo un poco para que no se te vaya a subir el degrade.
-                En este ultimo paso vamos a borrar la linea de la 0 y eso se hace bajando la palanca solo un poco y hacer un movimiento como si estuviéramos haciendo un gancho.
-                Ya por ultimo pasamos la maquina shaver para borrar la patilla y después marcar el corte con la barbera elegance.Recuerda que en estos tipos de cortes de cabello para hombres coby, es mejor borrar la patilla, para mi gusto queda mucho mejor.
+                Lo primero que tenemos que hacer para hacer el coby corte de cabello es, hacer una línea diagonal que termine en el cerquillo y que conecte con la oreja. 
+                Para que tu corte de cabello el coby te quede como en la imagen, debes de seguirme paso a paso para que sea mucho más fácil aprender. Luego vamos bajar total mente la palanca de nuestra maquina en un para que sea una 0.5 y vamos a hacer otro espacio de 1 cm de altura.
+                Después utilizamos la guía numero también con otro espacio de 1 centímetro, y ahí mismo bajar la palanca para borrar esa misma línea.
+                luego vamos a utilizar la guía 1.5 para seguir desbastando la misma línea de la guía de la 1. 
+                En el 4 paso vamos a utilizar la guía 0.5 y vamos a borrar la misma línea de que hicimos al comienzo del corte, tenemos que bajar la palanca solo un poco para que no se te vaya a subir el degrade.
+                En este último paso vamos a borrar la línea de la 0 y eso se hace bajando la palanca solo un poco y hacer un movimiento como si estuviéramos haciendo un gancho.
+                Ya por ultimo pasamos la maquina shaver para borrar la patilla y después marcar el corte con la barbera elegance. Recuerda que en estos tipos de cortes de cabello para hombres coby, es mejor borrar la patilla, para mi gusto queda mucho mejor.
             </p>
         </div>
     </section>
