corrigiendo ortografia en la pagina tijeras

--- a/paginas/tijeras.html
+++ b/paginas/tijeras.html
@@ -128,7 +128,7 @@
 
             <div class="evolucion wow animate__animated animate__fadeInLeft">
                 <h2>
-                    Evolucion de las Tijeras del Barbero
+                    Evolución de las Tijeras del Barbero
                 </h2>
                 <p>
                     Las tijeras que utilizamos en nuestras barberías son las herederas de las que se inventaron durante la Edad Media. El muelle y el tamaño reducido fueron sustituidos por tijeras de mayor tamaño con un pasador en la zona central.
