corrigiendo ortografia en la pagina cuchillas

--- a/paginas/cuchillas.html
+++ b/paginas/cuchillas.html
@@ -95,16 +95,16 @@
         <section class="freestyle row g-0">
             <div>
                 <h2>
-                    El Freestyle en la Barberia
+                    El Freestyle en la Barbería
                 </h2>
                 <p>
                    El Freestyle, los cortes de pelo extremos que hicieron furor entre los jugadores de futbol, cantantes y hoy es la moda urbana de mayor pegada en el mundo.
                    <br>
                    <br>
-                   El portal Infoabe en un articulo publicado en argentina, nos revela su origenes y evolucion:
+                   El portal Infoabe en un artículo publicado en argentina, nos revela sus orígenes y evolución:
                    <br>
                    <br>
-                   El Freestyle en los peinados se impone desde las pequeñas barberias de los border urbanos, barrios que revelan los mayores contrastes culturales de una ciudad, y luego arriban para ser tendencias masivas, un fenomeno que podria asociarse a la manifestacion artisticaque puede verse reflejada en los grafitis, el hip hop, rap, el trap, expresiones que cuentan con alto contenido social pero no solo en intencion de ser protesta sino simplemente como relatos sobre la via actual de los jovenes.
+                   El Freestyle en los peinados se impone desde las pequeñas barberías de los bordes urbanos, barrios que revelan los mayores contrastes culturales de una ciudad, y luego arriban para ser tendencias masivas, un fenómeno que podría asociarse a la manifestación artística que puede verse reflejada en los grafitis, el hip hop, rap, el trap, expresiones que cuentan con alto contenido social pero no solo en intención de ser protesta sino simplemente como relatos sobre la vía actual de los jóvenes.
                 </p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Z4CgT-2E8ek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
