--- a/paginas/usuarios.html
+++ b/paginas/usuarios.html
@@ -34,6 +34,9 @@
     <main>
         <form class="formulario">
             <div class="mb-3">
+                <label for="exampleInputName1" class="form-label">Ingresa tu Nombre</label>
+                <input type="text" class="form-control" id="exampleInputName1">
+            <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Ingresa tu Correo Electronico</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">tu correo electronico te servira para ingresar con tu usuario proximas veces</div>
